[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Characters/Player/PlayerSprites/AgingSprites/PC_Body5.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Characters/Player/PlayerSprites/AgingSprites/PC_Female5.png" type="Texture" id=2]
[ext_resource path="res://UI/ParallaxBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/gameplay_theme.tres" type="Theme" id=4]
[ext_resource path="res://UI/Menus/CharacterSelection/CharacterSelection.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Characters/Player/PlayerSprites/AgingSprites/PC_test_aging5.png" type="Texture" id=6]
[ext_resource path="res://UI/Fonts/mama-bear/Mama Bear Incease/Mama Bear Incease.otf" type="DynamicFontData" id=7]
[ext_resource path="res://GFX/arrow_right.png" type="Texture" id=8]
[ext_resource path="res://GFX/arrow_left.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 7 )

[node name="CharacterSelection" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
theme = ExtResource( 4 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" parent="." instance=ExtResource( 3 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -483.5
margin_top = -213.0
margin_right = 483.5
margin_bottom = 213.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 1137.0
margin_bottom = 57.0
theme = ExtResource( 4 )
text = "Choose mode"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 61.0
margin_right = 1137.0
margin_bottom = 101.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Singleplayer" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 318.0
margin_top = 10.0
margin_right = 492.0
margin_bottom = 30.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
text = "Singleplayer"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 542.0
margin_right = 606.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplayer" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 656.0
margin_top = 10.0
margin_right = 818.0
margin_bottom = 30.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
text = "Multiplayer"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 105.0
margin_right = 1137.0
margin_bottom = 399.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2"]
margin_right = 1137.0
margin_bottom = 294.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer2/VBoxContainer"]
margin_right = 358.0
margin_bottom = 294.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer"]
margin_right = 358.0
margin_bottom = 250.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SingleplayerLeft" type="Button" parent="VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 250.0
rect_min_size = Vector2( 50, 0 )
icon = ExtResource( 9 )
expand_icon = true

[node name="SingleplayerTextureRect" type="TextureRect" parent="VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 304.0
margin_bottom = 250.0
rect_min_size = Vector2( 250, 250 )
texture = ExtResource( 6 )
expand = true

[node name="SingleplayerRight" type="Button" parent="VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 308.0
margin_right = 358.0
margin_bottom = 250.0
rect_min_size = Vector2( 50, 0 )
icon = ExtResource( 8 )
expand_icon = true

[node name="Button2" type="Button" parent="VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer"]
margin_top = 254.0
margin_right = 358.0
margin_bottom = 294.0
text = "Singleplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="VBoxContainer" parent="VBoxContainer/VBoxContainer2/VBoxContainer"]
margin_left = 408.0
margin_right = 1137.0
margin_bottom = 294.0
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer3"]
margin_right = 729.0
margin_bottom = 250.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer3/HBoxContainer2"]
margin_right = 367.0
margin_bottom = 250.0

[node name="MP1Left" type="Button" parent="VBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer3/HBoxContainer2/HBoxContainer"]
margin_right = 50.0
margin_bottom = 250.0
rect_min_size = Vector2( 50, 50 )
icon = ExtResource( 9 )
expand_icon = true

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer3/HBoxContainer2/HBoxContainer"]
margin_left = 54.0
margin_right = 304.0
margin_bottom = 250.0
rect_min_size = Vector2( 250, 250 )
texture = ExtResource( 1 )
expand = true

[node name="MP1Right" type="Button" parent="VBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer3/HBoxContainer2/HBoxContainer"]
margin_left = 308.0
margin_right = 358.0
margin_bottom = 250.0
rect_min_size = Vector2( 50, 50 )
icon = ExtResource( 8 )
expand_icon = true

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer3/HBoxContainer2/HBoxContainer"]
margin_left = 362.0
margin_right = 367.0
margin_bottom = 250.0
custom_constants/separation = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer3/HBoxContainer2"]
margin_left = 371.0
margin_right = 729.0
margin_bottom = 250.0

[node name="MP2Left" type="Button" parent="VBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer3/HBoxContainer2/HBoxContainer2"]
margin_right = 50.0
margin_bottom = 250.0
rect_min_size = Vector2( 50, 50 )
icon = ExtResource( 9 )
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer3/HBoxContainer2/HBoxContainer2"]
margin_left = 54.0
margin_right = 304.0
margin_bottom = 250.0
rect_min_size = Vector2( 250, 250 )
texture = ExtResource( 2 )
expand = true

[node name="MP2Right" type="Button" parent="VBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer3/HBoxContainer2/HBoxContainer2"]
margin_left = 308.0
margin_right = 358.0
margin_bottom = 250.0
rect_min_size = Vector2( 50, 50 )
icon = ExtResource( 8 )
expand_icon = true

[node name="Button" type="Button" parent="VBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer3"]
margin_top = 254.0
margin_right = 729.0
margin_bottom = 294.0
text = "Multipalyer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -60.0
rect_min_size = Vector2( 300, 50 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="VBoxContainer/HBoxContainer/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer/SingleplayerLeft" to="." method="_on_SingleplayerLeft_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer/SingleplayerRight" to="." method="_on_SingleplayerRight_pressed"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer/Button2" to="." method="_on_Button2_toggled"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer3/HBoxContainer2/HBoxContainer/MP1Left" to="." method="_on_MP1Left_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer3/HBoxContainer2/HBoxContainer/MP1Right" to="." method="_on_MP1Right_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer3/HBoxContainer2/HBoxContainer2/MP2Left" to="." method="_on_MP2Left_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer3/HBoxContainer2/HBoxContainer2/MP2Right" to="." method="_on_MP2Right_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
